# SetupCraft

./: # Code Citations.md  .clangd  .gitignore  API_list.txt  CHANGELOG.md  CMakeLists.txt  Changelog.html  GPLv2.md  IconViewer.cpp  NSBEdit.html  NeedToDoBeforePublish.rtf  NewVersion.ps1  README.md  SetupCraft.rc  _follow.ps1  about.cpp  about.h  about_icon.cpp  about_icon.h  add_manual_keys.ps1  app.manifest  build_iconviewer.bat  button.cpp  button.h  button_INTERNALS.txt  checkbox.cpp  checkbox.h  checkbox_API.txt  commit_msg.tmp  ctrlw.cpp  ctrlw.h  curver.txt  db.cpp  db.h  dep_edit_dialog.cpp  dep_edit_dialog.h  deps.cpp  deps.h  deps_INTERNALS.txt  dialog_INTERNALS.txt  (+84 more)
API_INTERNALS/API/: checkbox_API.txt  edit_rtf_API.txt  my_scrollbar_API.txt  my_scrollbar_hscroll_API.txt  my_scrollbar_vscroll_API.txt  ne_autocomplete_API.txt  shell32_API.txt  skeleton_idea.txt  tooltip_API.txt  vfs_picker_API.txt
API_INTERNALS/INTERNALS/: add_ui_language_INTERNALS.txt  button_INTERNALS.txt  button_rightclick_combo_INTERNALS.txt  comp_deps_INTERNALS.txt  deps_INTERNALS.txt  dialog_INTERNALS.txt  dialogs_INTERNALS.txt  files_save_load_INTERNALS.txt  focus_restore_INTERNALS.txt  hrule_INTERNALS.txt  i18n_INTERNALS.txt  icon_INTERNALS.txt  line_number_INTERNALS.txt  manual_INTERNALS.txt  preview_autofit_INTERNALS.txt  sc_shortcut_dialog_INTERNALS.txt  scripts_INTERNALS.txt  scrollbar_INTERNALS.txt  scrollbar_custom_make.txt  scrollbar_custom_make_INTERNALS.txt  scrollbar_reopen_INTERNALS.txt  tab_editor_INTERNALS.txt  zoom_INTERNALS.txt
MyStyle/: API_list.txt  _follow.ps1  new-project.ps1
MyStyle/API_INTERNALS/API/: checkbox_API.txt  dragdrop_API.txt  edit_rtf_API.txt  my_scrollbar_hscroll_API.txt  my_scrollbar_vscroll_API.txt  shell32_API.txt  skeleton_idea.txt  spinner_dialog_API.txt  tooltip_API.txt
MyStyle/API_INTERNALS/INTERNALS/: add_ui_language_INTERNALS.txt  button_INTERNALS.txt  button_rightclick_combo_INTERNALS.txt  comp_deps_INTERNALS.txt  deps_INTERNALS.txt  dialog_INTERNALS.txt  dialogs_INTERNALS.txt  files_save_load_INTERNALS.txt  focus_restore_INTERNALS.txt  hrule_INTERNALS.txt  i18n_INTERNALS.txt  icon_INTERNALS.txt  line_number_INTERNALS.txt  manual_INTERNALS.txt  preview_autofit_INTERNALS.txt  sc_shortcut_dialog_INTERNALS.txt  scripts_INTERNALS.txt  scrollbar_INTERNALS.txt  scrollbar_reopen_INTERNALS.txt  shortcuts_INTERNALS.txt  tab_editor_INTERNALS.txt  zoom_INTERNALS.txt
NSBEdit/: NSBEdit.cpp  NSBEdit.h
NSBEdit_files/: css
SetupCraft/: curver.txt
SetupCraft/inno/: ISCmplr.dll.issig  ISPP.dll.issig  Setup.e64.issig  SetupCraft_test_generated.iss  SetupCustomStyle.e64.issig  SetupLdr.e32  SetupLdr.e32.issig  SetupLdr.e64  SetupLdr.e64.issig  is7z-x64.dll.issig  is7zxa.dll.issig  is7zxr-x64.dll.issig  is7zxr.dll.issig  islzma-x64.dll.issig  template.iss
SetupCraft/locale/: da_DK.txt  de_CH.txt  de_DE.txt  el_GR.txt  en_GB.txt  es_ES.txt  fr_CH.txt  fr_FR.txt  is_IS.txt  it_CH.txt  it_IT.txt  nl_BE.txt  nl_NL.txt  no_NB.txt  no_NN.txt  pl_PL.txt  pt_PT.txt  rm_CH.txt  ro_RO.txt  uk_UA.txt
glyphpicker/: CMakeLists.txt  app.manifest  extract_icon.ps1  glyphpicker.cpp  makeit.bat
icons/: README.txt
inno/: ISetup-dark.chm  ISetup.chm  Setup.e32.issig  SetupCustomStyle.e32.issig  compile_inno.bat  is7z.dll.issig  is7zxa-x64.dll.issig  islzma-Arm64EC.dll.issig  template.iss  unins001.msg  whatsnew.htm
inno/Examples/: CodeAutomation.iss  CodeAutomation2.iss  CodeClasses.iss  CodeDll.iss  CodeDownloadFiles.iss  CodeExample1.iss  CodePrepareToInstall.iss  DownloadFiles.iss  PowerShell.iss  UninstallCodeExample1.iss
inno/Examples/MyDll/C/: MyDll.c  MyDll.sln  MyDll.vcxproj
inno/Examples/MyDll/Delphi/: MyDll.dpr  MyDll.dproj
locale/: da_DK.txt  de_CH.txt  de_DE.txt  el_GR.txt  en_GB.txt  es_ES.txt  fr_CH.txt  fr_FR.txt  is_IS.txt  it_CH.txt  it_IT.txt  nl_BE.txt  nl_NL.txt  no_NB.txt  no_NN.txt  pl_PL.txt  pt_PT.txt  rm_CH.txt  ro_RO.txt  uk_UA.txt
mingw_dlls/: README.md
sql/: setupcraft_schema.sql
sqlite3/: README.md
stopwatch/: CMakeLists.txt  LISENCE.txt  README.md  app.manifest  extract_icon.ps1  extract_icon2.ps1  icon.rc  stopwatch.cpp  stopwatch.ini
test_scrollbar/: CMakeLists.txt  test_scrollbar.cpp
test_scrollbar/build_test/: CMakeCache.txt  Makefile  cmake_install.cmake
